--- a/src/Admin/Templates/ObjectDB.twig
+++ b/src/Admin/Templates/ObjectDB.twig
@@ -5,6 +5,7 @@ SET time_zone = "+00:00";
 CREATE TABLE `obj_{{ name }}` (
 `id` int(11) NOT NULL,
 `sortorder` int(11) NOT NULL,
+`dateadded` text NOT NULL,
 `published` tinyint(1) NOT NULL DEFAULT 1
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
 
